force-app/main/default/objects/ItemNotaFiscal__c/ItemNotaFiscal__c.object-meta.xml
<CustomObject>
    <description>Item individual identificado pela IA dentro do texto de uma Nota Fiscal.</description>
    <label>Item da Nota Fiscal</label>
    <nameField>
        <displayFormat>ITEM-{00000}</displayFormat>
        <label>Numero do Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da Nota Fiscal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>