force-app/main/default/objects/ItemNotaFiscal__c/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <label>Nota Fiscal</label>
    <referenceTo>NotaFiscal__c</referenceTo>
    <relationshipLabel>Itens</relationshipLabel>
    <relationshipName>Itens</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>