force-app/main/default/objects/ItemNotaFiscal__c/fields/Valor_Total_Item__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Item__c</fullName>
    <label>Valor Total do Item</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>